# icp-canister-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  package-lock.json  package-set.dhall  package.json  tailwind.config.js  tsconfig.json  vessel.dhall  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
src/: Types.mo  alby_testnet.mo  lndService.js  rsk_testnet.mo
src/backend/: Types.mo  alby_testnet.mo  evm.mo  lightning_testnet.mo  ln.mo  main.mo  rsk_testnet.mo  utils.mo
src/backups/: alby_backup.mo  lnd_backup.mo
src/frontend/assets/contracts/: abis.js  addresses.js
src/frontend/assets/contracts/abis/: RSKBridgeLightning.json
src/frontend/src/: App.js  AppContext.js  RSKLightningBridge.module.css  index.html  index.js
src/frontend/src/.well-known/: ic-domains
src/frontend/src/components/: Footer.js  Header.js  Info.js  MainMenu.js  TransactionsList.js
src/frontend/src/components/petitions/: CreatePetition.js  CreatePetitionLN.js  SolvePetitions.js  SolvePetitionsLN.js
src/frontend/src/components/ui/: Alert.js  AlertDialog.js  Avatar.js  Badge.js  Button.js  Card.js  (+4 more)
src/frontend/src/hooks/: useNostr.js  useWeb3Modal.js
src/frontend/src/pages/: EvmToEvm.js  EvmToLightning.js  HomePage.js  LightningToEvm copy.js  LightningToEvm.js  NostrEvents.js  Petitions.js  PetitionsLN.js  Swap.js  evmToLightning.js
src/rust_hello_backend/: Cargo.toml  rust_hello_backend.did
src/rust_hello_backend/src/: lib.rs
src/send_http_get_backend/: alby.mo  main.mo
src/send_http_get_frontend/src/: index.html  index.js
(+4 files in other folders)
