[package]
name = "rust_hello_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
aes-gcm = "0.9.3"
aead = "0.3.2"
block-modes = "0.8.1"
block-padding = "0.2.1"
hex = "0.4.3"
ic-cdk = "0.7"
serde = "1.0.126"
serde_derive = "1.0.126"
ic-cdk-macros = "0.7.1"
generic-array = "0.14.4" 
base64 ="0.13.0"

